--- a/TaxiUsuario/app/src/main/res/layout/activity_register.xml
+++ b/TaxiUsuario/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Register">
 
     <ScrollView
@@ -37,13 +41,12 @@
                     android:id="@+id/editText_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+
                     android:drawableLeft="@drawable/ic_email"
                     android:drawablePadding="10dp"
                     android:hint="@string/email"
-                    android:inputType=""
-                     />
+                    android:inputType="textEmailAddress"
+                    tools:ignore="RtlHardcoded" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -54,8 +57,6 @@
                     android:id="@+id/editText_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
                     android:layout_marginTop="16dp"
                     android:drawableLeft="@drawable/ic_password"
                     android:drawablePadding="10dp"
@@ -70,9 +71,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:baselineAligned="false">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="0dp"
@@ -101,7 +101,6 @@
                         android:id="@+id/editText_last_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/ic_user"
                         android:hint="@string/last_name"
                         tools:ignore="RtlHardcoded" />
 
@@ -120,34 +119,41 @@
                     android:drawableLeft="@drawable/ic_phone_number"
                     android:hint="@string/phone_number"
                     tools:ignore="RtlHardcoded"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:inputType="" />
+
+                    android:inputType="phone" />
 
             </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView_policies"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/policies"
-                android:gravity="center"
-                android:textSize="15dp"
-                android:typeface="sans"
-                android:layout_marginTop="30dp"
-                tools:ignore="SpUsage" />
 
-            <Button
-                android:id="@+id/button_register"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/sign_in"
-                android:textColor="@color/colorText"
-                android:theme="@style/MyButton"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView_policies"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/policies"
+                    android:gravity="center"
+                    android:textSize="15dp"
+                    android:typeface="sans"
+                    android:layout_marginTop="30dp"
+                    tools:ignore="SpUsage"
+                    android:layout_centerInParent="true"/>
+
+                <Button
+                    android:id="@+id/button_register"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/sign_in"
+                    android:textColor="@color/colorText"
+                    android:theme="@style/MyButton"
+                    android:layout_alignParentBottom="true"
                 />
+
+            </RelativeLayout>
+
         </LinearLayout>
 
     </ScrollView>
