--- a/TaxiUsuario/app/src/main/res/values/styles.xml
+++ b/TaxiUsuario/app/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
         <item name="colorButtonNormal">@color/colorPrimary</item>
     </style>
 
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.AppCompa.NoActionBar2" parent="Theme.AppCompat.NoActionBar" >
+        <item name="colorPrimary">@color/primary_material_dark_1</item>
+    </style>
+
 </resources>
