:lantern:  Login y submit
Login y submit hechos

--- a/TaxiUsuario/app/src/main/res/layout/activity_login.xml
+++ b/TaxiUsuario/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.taxiusuario.Login">
+    tools:context="com.taxiusuario.View.Login.Login">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        tools:ignore="UselessParent">
+        tools:ignore="UselessParent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
     <LinearLayout
         android:orientation="vertical"
