--- a/TaxiUsuario/app/src/main/res/layout/activity_submit.xml
+++ b/TaxiUsuario/app/src/main/res/layout/activity_submit.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Register">
+    tools:context=".View.Submit.Submit">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -32,13 +32,12 @@
                 android:src="@mipmap/ic_launcher_splash"
                 tools:ignore="ContentDescription" />
 
-
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editText_email"
+                    android:id="@+id/edt_smit_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
@@ -54,7 +53,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editText_password"
+                    android:id="@+id/edt_smit_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -66,7 +65,6 @@
                     tools:ignore="RtlHardcoded" />
 
             </android.support.design.widget.TextInputLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -81,7 +79,7 @@
                     >
 
                     <EditText
-                        android:id="@+id/editText_name"
+                        android:id="@+id/edt_smit_name"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:drawableLeft="@drawable/ic_user"
@@ -98,7 +96,7 @@
                     >
 
                     <EditText
-                        android:id="@+id/editText_last_name"
+                        android:id="@+id/edt_smit_lst_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/last_name"
@@ -113,17 +111,15 @@
                 android:layout_height="wrap_content"
                 >
                 <EditText
-                    android:id="@+id/editText_phone_number"
+                    android:id="@+id/edt_smit_phone_num"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_phone_number"
                     android:hint="@string/phone_number"
                     tools:ignore="RtlHardcoded"
-
                     android:inputType="phone" />
 
             </android.support.design.widget.TextInputLayout>
-
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -137,7 +133,7 @@
                     android:gravity="center"
                     android:textSize="15dp"
                     android:typeface="sans"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="25dp"
                     tools:ignore="SpUsage"
                     android:layout_centerInParent="true"/>
 
@@ -145,12 +141,11 @@
                     android:id="@+id/button_register"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="25dp"
                     android:text="@string/sign_in"
                     android:textColor="@color/colorText"
                     android:theme="@style/MyButton"
-                    android:layout_alignParentBottom="true"
-                />
+                    android:layout_alignParentBottom="true"/>
 
             </RelativeLayout>
 
