--- a/TaxiUsuario/app/src/main/res/layout/content_home.xml
+++ b/TaxiUsuario/app/src/main/res/layout/content_home.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.taxiusuario.Home"
+    tools:context="com.taxiusuario.View.Home.Home"
     android:background="@color/colorPrimaryDark"
     tools:showIn="@layout/app_bar_home">
 
