--- a/Usuario/app/src/main/res/layout/activity_login.xml
+++ b/Usuario/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.example.valhallasoft.usuariotaxa.View.Login.Login">
+    tools:context="com.example.valhallasoft.usuariotaxa.View.Login.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
