--- a/Usuario/app/src/main/res/layout/activity_submit.xml
+++ b/Usuario/app/src/main/res/layout/activity_submit.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.valhallasoft.usuariotaxa.View.Submit.Submit">
+    tools:context="com.example.valhallasoft.usuariotaxa.View.Submit.SubmitActivity">
 
     <ScrollView
         android:layout_width="match_parent"
