--- a/Usuario/app/src/main/res/layout/dash_fragment.xml
+++ b/Usuario/app/src/main/res/layout/dash_fragment.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tvDahName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="FragmentDash"
         android:gravity="center" />
 
 </LinearLayout>
